# fluss-gateway

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  GATEWAY_IMPROVEMENTS.md  README.md  docker-compose.yml  release.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yml  release.yml
deploy/: install.sh
deploy/config/: gateway.toml.example
deploy/docker/: Dockerfile  Dockerfile.arm64  Dockerfile.build  Dockerfile.release  Dockerfile.standalone  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.standalone.yml  docker-compose.test.yml
deploy/systemd/: fluss-gateway.service
docs/: API.md  ARCHITECTURE.md  DEPLOY.md  PROGRESS.md  PROJECT.md
docs/cn/: API.md  ARCHITECTURE.md  DEPLOY.md  PROGRESS.md  PROJECT.md  README.md  RELEASE.md
docs/en/: API.md  ARCHITECTURE.md  DEPLOY.md  PROGRESS.md  PROJECT.md  RELEASE.md
research/: kafka-rest-proxy-gateway-research.md  kafka-rest-source-code-analysis.md
src/: api_doc.rs  config.rs  main.rs  metrics.rs  pool.rs  resilience.rs
src/backend/: mod.rs
src/server/: auth.rs  mod.rs
src/server/rest/: mod.rs
src/types/: mod.rs
tests/: common.rs  integration.rs  setup.rs  teardown.rs
