[package]
name = "fluss-gateway"
version = "0.1.4"
edition = "2021"
description = "REST API Gateway for Apache Fluss"

[dependencies]
fluss = { version = "0.1", package = "fluss-rs" }

axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["retry", "timeout"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

arrow = "57"

thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ordered-float = "5"
base64 = "0.22"
moka = { version = "0.12", features = ["future"] }
sha2 = "0.10"
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
metrics-util = "0.17"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
http-body-util = "0.1"
